[package]
name = "sign-queries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
num_cpus = "1.13.1"
ring = "0.16.20"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
threadpool = "1.8.1"
walkdir = "2.3.2"
